# awesome-pytorch

./: .gitignore  00.ipynb  01.ipynb  02.ipynb  README.md  main.py  pyproject.toml
projects/digit-recognition/: experiment.ipynb
video_notebooks/: 02.ipynb  03.ipynb  03_pytorch_computer_vision_video.ipynb  04.ipynb
